--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-alpha.78",
+    "@mui/x-data-grid": "^6.3.1",
     "numeral": "^2.0.6",
     "semantic-ui-flag": "^2.5.0"
   }
