--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/joy": "^5.0.0-alpha.78",
     "@mui/x-data-grid": "^6.3.1",
     "numeral": "^2.0.6",
+    "query-string": "^8.1.0",
     "semantic-ui-flag": "^2.5.0"
   }
 }
