--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "@mui/x-data-grid": "^6.3.1",
     "numeral": "^2.0.6",
     "query-string": "^8.1.0",
-    "semantic-ui-flag": "^2.5.0"
+    "querystring": "^0.2.1",
+    "semantic-ui-flag": "^2.5.0",
+    "slugify": "^1.6.6",
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.7.1"
   }
 }
