--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "React components based on Joy UI for rendering follow the money stuff.",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack.production.js",
+    "start": "webpack serve --config webpack.development.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,18 +19,36 @@
   },
   "homepage": "https://github.com/investigativedata/ftm-joy-ui#readme",
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/joy": "^5.0.0-alpha.78",
-    "@mui/x-data-grid": "^6.3.1",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/joy": "^5.0.0-beta.24",
+    "@mui/x-data-grid": "^6.19.2",
+    "is-core-module": "^2.13.1",
     "numeral": "^2.0.6",
     "query-string": "^8.1.0",
     "querystring": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "resolve": "^1.22.8",
     "semantic-ui-flag": "^2.5.0",
-    "slugify": "^1.6.6",
-    "typescript": "^5.2.2"
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "@types/node": "^20.7.1"
+    "@types/node": "^20.11.10",
+    "@types/numeral": "^2.0.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.9.1",
+    "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   }
 }
